web-drupal: fixed more pointless white space from a clear:both; on the user profile page

--- a/web/drupal/sites/all/themes/robogrid/style.css
+++ b/web/drupal/sites/all/themes/robogrid/style.css
@@ -582,3 +582,5 @@ ul, ol {
 	margin-bottom:3px;
 }
 
+/* User Profile */
+.profile { clear: none; }
